dataset/CASSANDRA/CASSANDRA-2063.txt
Summary:
bug with test
Description:
when executing nosetests (e.g: nosetests test/system/test_avro_system.py), you get the following error:
mod = load_module(part_fqname, fh, filename, desc)
File "/tmp/apache-cassandra-0.7.0-src/test/system/test_avro_system.py", line 19
from . import AvroTester
^
SyntaxError: invalid syntax
All *.py scripts should be changed to be "from _init_ import (AvroTester)" instead of "from . import AvroTester"
Status:
RESOLVED
Priority:
Low
Resolution:
Fixed
Affects_version:

Fix_version:
0.7.1
Component:
None
Label:
None
Environment:
python, redhat
Attachment number:
0
Assignee:
Eric Evans
Reporter:
Amit Cahanovich
Create date:
27/Jan/11 11:34
Update date:
16/Apr/19 09:33
Resolved date:
27/Jan/11 22:44
